# stubsdk

./: .gitignore  CMakeLists.txt  README.md
src/: Functions.cpp  Functions.h  stubsdk_c.cpp  stubsdk_c.h
test/: FunctionsTest.hpp
